REGRESSION (273213@main): ImageBitmap fails to report memory cost https://bugs.webkit.org/show_bug.cgi?id=295618 rdar://155563791

Reviewed by Matt Woodrow.

GC would not be triggered when many or large ImageBitmaps were
allocated.

Update ImageBitmap::m_memoryCost when creating the instance. This will
be used by bindings ReportExtraMemoryCost feature to report
the extra memory cost to the JS heap when the binding object is created
and visited.

Test: fast/images/imagebitmap-memory.html
* LayoutTests/fast/images/imagebitmap-memory-expected.html: Added.
* LayoutTests/fast/images/imagebitmap-memory.html: Added.
* Source/WebCore/html/ImageBitmap.cpp:
(WebCore::ImageBitmap::detach):
(WebCore::ImageBitmap::ImageBitmap):
(WebCore::ImageBitmap::~ImageBitmap):
(WebCore::ImageBitmap::takeImageBuffer):
(WebCore::ImageBitmap::memoryCost const):
(WebCore::ImageBitmap::updateMemoryCost): Deleted.
* Source/WebCore/html/ImageBitmap.h:

Canonical link: https://commits.webkit.org/300870@main